syntax = "proto3";

package spark;

option go_package = "github.com/lightsparkdev/spark-go/proto";
import "google/protobuf/empty.proto";

service SparkInternalService {
    rpc mark_keyshares_as_used(MarkKeysharesAsUsedRequest) returns (google.protobuf.Empty) {}
}

message MarkKeysharesAsUsedRequest {
    repeated string keyshare_id = 1;
}
